add animate.css plugin

--- a/resources/scss/public.scss
+++ b/resources/scss/public.scss
@@ -1,6 +1,7 @@
 @import 'public/bootstrap';
 @import 'node_modules/font-awesome/scss/font-awesome';
 @import 'node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
+@import 'node_modules/animate.css/animate.min';
 @import 'public/errors';
 @import 'public/site-header';
 @import 'public/site-footer';
